--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background: url("img/bg.png") no-repeat fixed 30%;
 }
 
-form[name="input"], .solution, .answer {
+form[name="input"], .answer {
   padding: 10px 20px;
   margin-bottom: 12px;
 
@@ -145,10 +145,6 @@ header {
   padding: 0 20px 0 20px;
 }
 
-.container > div {
-  align-items: center;
-}
-
 /* Input */
 
 .subtitle {
@@ -226,13 +222,29 @@ header {
   display: none;
 }
 
-.solution > div {
-  position: relative;
-  width: 100%;
+.solution {
+  padding: 10px 20px;
+  margin-bottom: 12px;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  box-shadow: 0 0 5px #7c7c7c;
+  border-radius: 20px;
+
+  background-color: #fff;
+}
+
+.solution .iteration {
+  position: relative;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+}
+
+.solution .iteration::-webkit-scrollbar {
+  display: none;
 }
 
 .step {
@@ -271,4 +283,61 @@ canvas {
 
 table tr:not(.table__client, .table__potential) td:not(.table__provider, .table__potential) .highlight {
   background-color: #ff7d7d;
+}
+
+/* Arrows */
+
+.arrow {
+  background-color: #f0f0ed;
+  display: inline-block;
+  position: absolute;
+  z-index: 100;
+  top: calc(50% - 20px);
+
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px #7dcf0e;
+  cursor: pointer;
+
+  transition: all 0.2s;
+}
+
+.arrow:active {
+  box-shadow: 0px 0px 2px #7dcf0e;
+
+  top: calc(50% - 22px);
+}
+
+.arrow.right {
+  right: 20px;
+}
+
+.arrow.rigt:active {
+  right: 18px;
+}
+
+.arrow.left {
+  left: 20px;
+}
+
+.arrow.left:active {
+  left: 22px;
+}
+
+.arrow img {
+  width: 100%;
+  height: 100%;
+}
+
+.arrow.left img {
+  transform: scale(-1, 1);
+}
+
+/* Carouselle */
+
+.carouselle {
+  position: relative;
 }
